--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 #container {
-    width: 800px;
-    height: 600px;
+    width: 640px;
+    height: 640px;
     display : flex;
     flex-wrap: wrap;
     margin: auto;
@@ -22,10 +22,29 @@ body {
     height: calc(33.333% - 10px);
     position : relative;
     margin: 5px;
-    box-shadow: 1px 1px 1px;
+    transform-style: preserve-3d;
 }
 
 .memCard:active {
     transform: scale(0.97);
     transition: 0.2s;
+}
+
+.front,
+.back {
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    position: absolute;
+    background: cornflowerblue;
+    backface-visibility: hidden;
+}
+
+.memCard.flip {
+    /* rotation to flip a card, but flips both images */
+    transform: rotateY(180deg);
+}
+.front{
+    /* rotation to show the logo when the back side is turned */
+    transform: rotateY(180deg);
 }
