--- a/leaderboard/src/components/App/App.css
+++ b/leaderboard/src/components/App/App.css
@@ -3,5 +3,5 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    background-color: darkcyan;
+    background-image: url(../../bckground.jpg);
 }
